--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npdc-person",
-  "version": "0.10.0",
+  "version": "0.10.1",
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
@@ -25,7 +25,14 @@
   },
   "browserify": {
     "transform": [
-      ["babelify",{"presets": ["es2015"]}],
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ],
       "partialify",
       "browserify-ngannotate"
     ]
